# ubus_server_streaming_to_fd

./: .gitignore
server/: CMakeLists.txt  LICENSE
server/include/: debug_output.h  streamer.h  ubus.h  ubus_connection.h  utils.h
server/src/: debug_output.c  streamer.c  streamerd.c  ubus.c  ubus_connection.c  ubus_utils.c  ubus_utils.h  utils.c
ubus_fd_client/: CMakeLists.txt  client.c
